--- a/195100.html
+++ b/195100.html
@@ -4,6 +4,6 @@
     <h1>GitHub Actions</h1>
     <p>Example HTML webpage for the KIII course at FINKI.</p>
     <p>This is an example.</p>
-    <p>New Line. Lets miss the closing tag.
+    <p>New Line. Lets miss the closing tag</p>
   </body>
 </html>
